--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,10 @@
 /vendor/bundle
 
 /public/uploads
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
